Se arregla codigo son sonar